--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,7 +1,230 @@
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
+<body>
+<div class="bg-white pt-4 pr-8 pb-4 pl-8">
+  <nav class="w-full">
+    <div class="flex w-full justify-between max-w-screen-2xl md:flex-row mt-auto mr-auto mb-auto ml-auto">
+      <div class="flex flex-row bg-white justify-between items-center mt-2 mb-2 md:m-0 hidden md:flex">
+        <a href="#" fontfamily="Raleway" class="text-gray-600 text-center mr-6 font-medium text-base">Product</a>
+        <a href="#" fontfamily="Raleway" class="text-gray-600 text-center mr-6 font-medium text-base">Features</a>
+        <a href="#" fontfamily="Raleway" class="text-gray-600 text-center font-medium text-base">Pricing</a>
+      </div>
+      <div class="bg-white flex-row flex items-center justify-center order-first md:order-none">
+        <img src="https://res.cloudinary.com/speedwares/image/upload/v1659284687/windframe-logo-main_daes7r.png"
+            class="w-12 md:w-16"/>
+      </div>
+      <div class="flex justify-center items-center md:justify-start hidden md:flex">
+        <button class="h-9 w-24 text-gray-600 bg-white border-2 border-white flex items-center justify-center
+            text-center rounded-lg text-lg font-normal mr-6">Sign in</button>
+        <button class="h-9 w-24 text-white bg-blue-700 hover:bg-blue-900 hover:border-blue-900 border-2 flex
+            items-center justify-center text-center border-blue-700 rounded-lg text-lg font-normal mr-auto">Sign
+            up</button>
+      </div>
+      <div class="md:hidden flex items-center">
+        <div class="outline-none mobile-menu-button">
+          <svg id="Windframe_-RP4YW4A98" fill="none" strokelinecap="round" strokewidth="2" viewbox="0 0 24 24" stroke="currentColor" class="w-6 h-6 text-gray-500 hover:text-green-500"><path id="Windframe_irI1r2ZOi7" d="M4 6h16M4 12h16M4 18h16"/></path></svg>
+        </div>
+      </div>
+    </div>
+    <div class="hidden mobile-menu">
+      <div class="flex flex-col items-center py-4">
+        <a href="#" class="text-gray-600 text-center py-2 font-medium text-base hover:text-gray-900">Product</a>
+        <a href="#" class="text-gray-600 text-center py-2 font-medium text-base hover:text-gray-900">Features</a>
+        <a href="#" class="text-gray-600 text-center py-2 font-medium text-base hover:text-gray-900">Pricing</a>
+        <div class="flex flex-col gap-4 mt-4">
+          <button class="h-9 w-32 text-gray-600 bg-white border-2 border-gray-200 flex items-center justify-center
+              text-center rounded-lg text-lg font-normal hover:border-gray-300">Sign in</button>
+          <button class="h-9 w-32 text-white bg-blue-700 hover:bg-blue-800 border-2 flex items-center justify-center
+              text-center border-blue-700 rounded-lg text-lg font-normal">Sign up</button>
+        </div>
+      </div>
+    </div>
+  </nav>
+</div>
+<div class="bg-white pt-16 pr-4 pb-16 pl-4 mr-auto ml-auto flex flex-col items-center relative lg:flex-row lg:py-32
+    xl:py-48 md:px-8 container mx-auto">
+  <div class="flex justify-center items-center w-full h-full lg:w-1/2 lg:justify-end lg:bottom-0 lg:left-0
+      lg:items-center">
+    <img src="https://i.imgur.com/DBK8aAb.png" class="object-contain object-top w-full h-auto lg:w-auto lg:h-full"/>
+  </div>
+  <div class="mr-auto ml-auto flex justify-end relative max-w-xl xl:pr-32 lg:max-w-screen-xl">
+    <div class="mb-16 lg:pr-5 lg:max-w-lg lg:mb-0">
+      <div class="mb-6 max-w-xl">
+        <p class="inline-block pt-1 pr-3 pb-1 pl-3 mb-4 text-pink-200 bg-pink-500 rounded-2xl uppercase text-xs
+            font-semibold tracking-wider">Brand new</p>
+        <div class="text-3xl font-bold tracking-tight text-gray-900 max-w-lg sm:text-4xl sm:leading-none mb-6">
+          <p class="text-gray-900 text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none">カーパーツ特化型</p>
+          <div>売上管理システム</div>
+          <p></p>
+          <p class="inline-block text-gray-900 text-3xl font-bold tracking-tight mr-2 sm:text-4xl
+              sm:leading-none">being</p>
+          <p class="inline-block text-blue-700 text-3xl font-bold tracking-tight sm:text-4xl
+              sm:leading-none">creative</p>
+        </div>
+        <p class="text-gray-700 text-base md:text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+      </div>
+      <div class="flex flex-col md:flex-row">
+        <input type="text" fontfamily="Raleway" placeholder="Email Address" class="md:mr-2 focus:border-blue-700
+            focus:outline-none focus:shadow-outline flex-grow transition duration-200 appearance-none text-black
+            bg-white font-normal w-full h-12 text-xs rounded-md pt-3 pr-4 pb-3 pl-4 mb-2 border-2 shadow-sm
+            border-gray-300"/>
+      </div>
+      <div class="flex items-center mt-4 mr-0 mb-0 ml-0">
+        <button class="transition duration-200 hover:bg-blue-900 focus:shadow-outline focus:outline-none bg-blue-700
+            text-white inline-flex font-semibold tracking-wide h-12 rounded-md shadow-md items-center justify-center
+            pr-6 pl-6 mr-6">Get Early Access</button>
+        <button class="transition duration-200 hover:bg-blue-50 focus:shadow-outline focus:outline-none bg-transparent
+            text-blue-700 inline-flex font-semibold tracking-wide h-12 rounded-md shadow-md items-center justify-center
+            pr-6 pl-6 mr-6">Request a Demo</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="bg-white mr-auto ml-auto pt-16 pr-4 pb-16 pl-4 sm:max-w-xl md:max-w-full md:px-24 lg:px-8 lg:py-20">
+  <div rounded="md" class="shadow-xl pt-8 pr-8 pb-8 pl-8 sm:p-16">
+    <div class="flex flex-col lg:flex-row">
+      <div class="lg:mb-0 lg:w-1/2 lg:pr-5 mb-6">
+        <div>
+          <p class="block text-3xl font-bold tracking-tight text-gray-900 leading-6 font-sans sm:text-4xl">
+            <span style="letter-spacing: -0.9px;">あなたは月末の集計作業に</span>
+          </p>
+          <p class="inline text-3xl font-bold tracking-tight text-gray-900 font-sans sm:text-4xl sm:leading-none"></p>
+          <p class="inline text-blue-700 text-3xl font-bold tracking-tight font-sans sm:text-4xl
+              sm:leading-none">時間を取られてうんざりしていませんか？</p>
+        </div>
+      </div>
+      <div class="lg:w-1/2">
+        <p class="mb-4 text-base text-left text-gray-700">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam</p>
+        <a class="w-3/12 text-blue-700 text-center flex font-semibold items-center transition-colors duration-200
+            hover:text-blue-900">Learn more</a>
+      </div>
+    </div>
+  </div>
+</div>
+<section class="py-24 bg-white text-black mx-auto px-6 lg:flex-row lg:gap-32 max-w-screen-2xl flex flex-col gap-20
+    relative isolate">
+  <svg class="h-[750px] w-[260px] absolute right-0 -z-10 overflow-hidden blur-2xl -top-72" viewBox="0 0 468 788" fill="none" xmlns="http://www.w3.org/2000/svg" id="Windframe_9eIR30ivqD"><circle cx="44.5105" cy="378.637" r="156.383" fill="#4A3AFF"/></circle><circle cx="119.803" cy="529.24" r="156.383" fill="#702DFF"/></circle><circle cx="173.364" cy="372.857" r="156.383" fill="#2D5BFF"/></circle><g filter="url(#filter0_b_1410_520)"><circle cx="73.5409" cy="394.049" r="393.819" fill="white" fill-opacity="0.79"/></circle></g><defs><filter x="-460.404" y="-139.896" width="1067.89" height="1067.89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood><feGaussianBlur in="BackgroundImageFix" stdDeviation="70.063"></feGaussianBlur><feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_1410_520"></feComposite><feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1410_520" result="shape"></feBlend></filter></defs></svg>
+  <div class="w-full lg:w-1/2">
+    <img
+        src="https://images.pexels.com/photos/8171163/pexels-photo-8171163.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt aspectratio="square" class="object-cover max-h-[550px] w-full rounded-3xl"/>
+    <div class="mt-10 space-y-6">
+      <p class="text-sm tracking-wide text-gray-600 font-semibold -mb-4 uppercase">— about us</p>
+      <p class="mt-4 text-4xl md:text-5xl font-bold">輸出事業にも対応</p>
+      <p class="text-base md:text-lg text-gray-600 mt-2">We are a leading tech consultation and software development
+          agency. We deliver custom, innovative solutions to help businesses thrive in the digital age. Our team of
+          experts combines industry knowledge with cutting-edge technology to meet your unique needs.</p>
+    </div>
+  </div>
+  <div class="lg:flex-col lg:w-1/2 w-full flex flex-col-reverse">
+    <div class="mt-10 lg:mb-10 space-y-6">
+      <p class="text-sm tracking-wide text-gray-600 font-semibold -mb-4 uppercase">— our story</p>
+      <p class="text-4xl md:text-5xl font-bold">データベース導入による工数削減</p>
+      <p class="text-base md:text-lg text-gray-600">Founded 4 years ago, westarted with a passion for technology and a
+          vision to bridge the gap between businesses and digital solutions. From a small team of tech enthusiasts,
+          we've grown into a trusted partner in tech consultation and software development.</p>
+    </div>
+    <img
+        src="https://images.pexels.com/photos/7693143/pexels-photo-7693143.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt aspectratio="square" class="object-cover max-h-[550px] w-full rounded-3xl"/>
+  </div>
+</section>
+<section class="py-20 bg-white text-black mx-auto px-6 max-w-screen-2xl relative isolate">
+  <svg class="h-[788px] w-[350px] sm:block absolute top-0 -z-10 transform-gpu hidden overflow-hidden blur-2xl right-0" viewBox="0 0 468 788" fill="none" xmlns="http://www.w3.org/2000/svg" id="Windframe_woREuuVJxD"><circle cx="44.5105" cy="378.637" r="156.383" fill="#4A3AFF"/></circle><circle cx="119.803" cy="529.24" r="156.383" fill="#702DFF"/></circle><circle cx="173.364" cy="372.857" r="156.383" fill="#2D5BFF"/></circle><g filter="url(#filter0_b_1410_520)"><circle cx="73.5409" cy="394.049" r="393.819" fill="white" fill-opacity="0.79"/></circle></g><defs><filter x="-460.404" y="-139.896" width="1067.89" height="1067.89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood><feGaussianBlur in="BackgroundImageFix" stdDeviation="70.063"></feGaussianBlur><feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_1410_520"></feComposite><feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1410_520" result="shape"></feBlend></filter></defs></svg>
+  <div class="mx-auto max-w-3xl">
+    <p class="text-sm tracking-wide mb-2 text-center text-gray-500 font-semibold uppercase">— FAQs</p>
+    <p class="text-4xl md:text-5xl font-bold text-center mb-4">Freqently Asked Questions</p>
+    <p class="text-lg mb-6 text-gray-500 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elitperiam
+        delectus exercitationem culpa voluptas molestias architecto laborum.</p>
+  </div>
+  <section class="mx-auto grid gap-8 max-w-5xl">
+    <div class="w-full rounded-xl bg-white border border-gray-300 p-6 space-y-4">
+      <p class="text-xl md:text-2xl font-semibold">What is the function of this web applications?</p>
+      <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus quae quia at facere
+          ratione? Quam voluptas omnis voluptate odit consequatur sunt adipisci voluptatum molestias.</p>
+    </div>
+    <div class="w-full rounded-xl bg-white border border-gray-300 p-6 space-y-4">
+      <p class="text-xl md:text-2xl font-semibold">What is the function of this web applications?</p>
+      <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus quae quia at facere
+          ratione? Quam voluptas omnis voluptate odit consequatur sunt adipisci voluptatum molestias.</p>
+    </div>
+    <div class="w-full rounded-xl bg-white border border-gray-300 p-6 space-y-4">
+      <p class="text-xl md:text-2xl font-semibold">What is the function of this web applications?</p>
+      <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus quae quia at facere
+          ratione? Quam voluptas omnis voluptate odit consequatur sunt adipisci voluptatum molestias.</p>
+    </div>
+    <div class="w-full rounded-xl bg-white border border-gray-300 p-6 space-y-4">
+      <p class="text-xl md:text-2xl font-semibold">What is the function of this web applications?</p>
+      <p class="text-gray-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus quae quia at facere
+          ratione? Quam voluptas omnis voluptate odit consequatur sunt adipisci voluptatum molestias.</p>
+    </div>
+  </section>
+</section>
+<div class="w-full">
+  <section class="py-10 bg-white sm:py-16 lg:py-24">
+    <div class="px-4 mx-auto sm:px-6 lg:px-8 max-w-7xl">
+      <div class="text-center">
+        <p tag="h2" class="text-3xl font-bold text-black sm:text-4xl lg:text-5xl leading-tight">
+          The best way to
+          <br/>
+          organize your work.
+        </p>
+        <div tag="p" class="mt-4 text-2xl font-medium text-gray-500">Access 500+ organization tips and tricks</div>
+        <div class="flex flex-col items-center justify-center sm:space-y-0 sm:space-x-4 sm:flex-row lg:mt-12 sm:px-0
+            px-16 space-y-4 mt-8">
+          <div class="inline-flex relative group">
+            <div style="background: linear-gradient(90deg, rgb(68, 255, 154) -0.55%, rgb(68, 176, 255) 22.86%, rgb(139,
+                68, 255) 48.36%, rgb(255, 102, 68) 73.33%, rgb(235, 255, 112) 99.34%);" class="absolute duration-1000
+                rotate-180 transition-all opacity-70 -inset-px rounded-xl blur-lg filter group-hover:opacity-100
+                group-hover:-inset-1 group-hover:duration-200"></div>
+            <a href="#" role="button" class="inline-flex justify-center items-center w-full px-8 py-4 text-base
+                font-semibold text-white bg-gray-900 sm:w-auto relative transition-all duration-200 border
+                border-tansparent rounded-md hover:bg-gray-700 focus:bg-gray-700">Get access now</a>
+          </div>
+        </div>
+        <div class="flex items-center justify-center mt-5">
+          <p class="text-base text-black">Terms and conditions apply.</p>
+          <a href="editor#" class="text-blue-600 transition-all duration-200 hover:text-blue-700 focus:text-blue-700
+              hover:underline">Learn more</a>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+<footer class="bg-gray-100 pt-16 pb-10 text-gray-800 transition-colors duration-300">
+  <div class="mx-auto items-center justify-center lg:flex-row lg:justify-between border-t border-gray-500 flex
+      max-w-screen-2xl flex-col gap-8 p-6">
+    <p class="text-center lg:text-start">Copyright © 2024 Windframe Templates | All Rights Reserved</p>
+    <div>
+      <nav class="items-center justify-center lg:flex-row lg:justify-start flex flex-col gap-8">
+        <ul class="lg:grid-cols-4 grid list-none grid-cols-2 gap-8">
+          <li class="text-center">
+            <a href="#" class="decoration-none no-underline hover:text-gray-400">About</a>
+          </li>
+          <li class="text-center">
+            <a href="#" class="decoration-none no-underline hover:text-gray-400">License</a>
+          </li>
+          <li class="text-center">
+            <a href="#" class="decoration-none no-underline hover:text-gray-400">Features</a>
+          </li>
+          <li class="text-center">
+            <a href="#" class="decoration-none no-underline hover:text-gray-400">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</footer>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const btn = document.querySelector(".mobile-menu-button");
+    const menu = document.querySelector(".mobile-menu");
 
-<button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2">tailwind</button>
+    if (btn && menu) {
+      btn.addEventListener("click", () => {
+        menu.classList.toggle("hidden");
+      });
+    }
+  });
+</script>
 
-<button class="btn btn-primary">daisyUI</button>
+</body>
