--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,13 +11,7 @@
   <div class="flex justify-center items-center md:justify-start hidden md:flex">
     <%= link_to "Sign in", new_user_session_path, class: "h-9 w-24 text-gray-600 bg-white border-2 border-white flex items-center justify-center
             text-center rounded-lg text-lg font-normal mr-6" %>
-    <button class="h-9 w-24 text-white bg-blue-700 hover:bg-blue-900 hover:border-blue-900 border-2 flex
-            items-center justify-center text-center border-blue-700 rounded-lg text-lg font-normal mr-auto">Sign
-      up</button>
-  </div>
-  <div class="md:hidden flex items-center">
-    <div class="outline-none mobile-menu-button">
-      <svg id="Windframe_-RP4YW4A98" fill="none" strokelinecap="round" strokewidth="2" viewbox="0 0 24 24" stroke="currentColor" class="w-6 h-6 text-gray-500 hover:text-green-500"><path id="Windframe_irI1r2ZOi7" d="M4 6h16M4 12h16M4 18h16"/></path></svg>
-    </div>
+    <%= link_to "Sign up", new_user_registration_path, class: "h-9 w-24 text-white bg-blue-700 hover:bg-blue-900 hover:border-blue-900 border-2 flex
+            items-center justify-center text-center border-blue-700 rounded-lg text-lg font-normal mr-auto" %>
   </div>
 </div>
