--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,6 +1,6 @@
 <div class="bg-white pt-4 pr-8 pb-4 pl-8">
   <nav class="w-full">
-    <%= render 'shared/navbar' %>
+    <%= render 'shared/_header/guest_header' %>
     <%= render 'hero_content' %>
     <%= render 'empathy_section' %>
     <%= render 'solution' %>
