--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-white pt-16 pb-10 text-gray-800 transition-colors duration-300">
+<footer class="pt-16 pb-10 text-gray-800 transition-colors duration-300 w-full">
   <div class="mx-auto items-center justify-center lg:flex-row lg:justify-between border-t border-gray-500 flex
       max-w-screen-2xl flex-col gap-8 p-6">
     <p class="text-center lg:text-start">Copyright © 2024 Windframe Templates | All Rights Reserved</p>
