--- a/app/views/shared/_header/_guest_header.html.erb
+++ b/app/views/shared/_header/_guest_header.html.erb
@@ -4,9 +4,9 @@
          class="w-12 md:w-16"/>
   </div>
   <div class="flex justify-center items-center md:justify-start hidden md:flex">
-    <%= link_to "Sign in", new_user_session_path, class: "h-9 w-24 text-gray-600 bg-white border-2 border-white flex items-center justify-center
+    <%= link_to t('shared.header.sign_in'), new_user_session_path, class: "h-9 w-24 text-gray-600 bg-white border-2 border-white flex items-center justify-center
             text-center rounded-lg text-lg font-normal mr-6" %>
-    <%= link_to "Sign up", new_user_registration_path, class: "h-9 w-24 text-white bg-blue-700 hover:bg-blue-900 hover:border-blue-900 border-2 flex
+    <%= link_to t('shared.header.sign_up'), new_user_registration_path, class: "h-9 w-24 text-white bg-blue-700 hover:bg-blue-900 hover:border-blue-900 border-2 flex
             items-center justify-center text-center border-blue-700 rounded-lg text-lg font-normal mr-auto" %>
   </div>
 </div>
