--- a/app/views/shared/_header/_landing_header.html.erb
+++ b/app/views/shared/_header/_landing_header.html.erb
@@ -1,17 +1,17 @@
 <div class="flex w-full justify-between max-w-screen-2xl md:flex-row mt-auto mr-auto mb-auto ml-auto">
   <div class="flex flex-row bg-white justify-between items-center mt-2 mb-2 md:m-0 hidden md:flex">
-    <a href="#" fontfamily="Raleway" class="text-gray-600 text-center mr-6 font-medium text-base">Product</a>
-    <a href="#" fontfamily="Raleway" class="text-gray-600 text-center mr-6 font-medium text-base">Features</a>
-    <a href="#" fontfamily="Raleway" class="text-gray-600 text-center font-medium text-base">Pricing</a>
+    <a href="#" fontfamily="Raleway" class="text-gray-600 text-center mr-6 font-medium text-base"><%= t('shared.header.product') %></a>
+    <a href="#" fontfamily="Raleway" class="text-gray-600 text-center mr-6 font-medium text-base"><%= t('shared.header.features') %></a>
+    <a href="#" fontfamily="Raleway" class="text-gray-600 text-center font-medium text-base"><%= t('shared.header.pricing') %></a>
   </div>
   <div class="bg-white flex-row flex items-center justify-center order-first md:order-none">
     <img src="https://res.cloudinary.com/speedwares/image/upload/v1659284687/windframe-logo-main_daes7r.png"
          class="w-12 md:w-16"/>
   </div>
   <div class="flex justify-center items-center md:justify-start hidden md:flex">
-    <%= link_to "Sign in", new_user_session_path, class: "h-9 w-24 text-gray-600 bg-white border-2 border-white flex items-center justify-center
+    <%= link_to t('shared.header.sign_in'), new_user_session_path, class: "h-9 w-24 text-gray-600 bg-white border-2 border-white flex items-center justify-center
             text-center rounded-lg text-lg font-normal mr-6" %>
-    <%= link_to "Sign up", new_user_registration_path, class: "h-9 w-24 text-white bg-blue-700 hover:bg-blue-900 hover:border-blue-900 border-2 flex
+    <%= link_to t('shared.header.sign_up'), new_user_registration_path, class: "h-9 w-24 text-white bg-blue-700 hover:bg-blue-900 hover:border-blue-900 border-2 flex
             items-center justify-center text-center border-blue-700 rounded-lg text-lg font-normal mr-auto" %>
   </div>
 </div>
