フラッシュメッセージの装飾の記述を追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
   <body>
     <main class="relative min-h-screen">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <%= render "layouts/flash_messages" %>
+      
       <%= yield %>
     </main>
   </body>
